--- a/PST vivi&dudu/index.html
+++ b/PST vivi&dudu/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <head>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
@@ -11,7 +10,13 @@
     </header>
 
     <mam>
+        <div class="texto">
+        <p><b>Nosso site busca oferecer um treino personalizado para o objetivo de cada usuário</b></p>
+        </div>
     </mam>
+
     <footer>
+        <img src="PST (1).png">
+        <p class="copyright">&copy; Copyright Vitória&Eduardo</p>
     </footer>
 </body>
