--- a/login.html
+++ b/login.html
@@ -12,8 +12,8 @@
                 <nav>
                     <ul>
                         <li><a href="paginaprincipal.html">PÁGINA PRINCIPAL</a>
-                        <li><a href="servicos.html">TREINOS</a>
-                        <li><a href="login.html">LOGIN</a>
+                        <li><a href="treinos.html">TREINOS</a>
+                        
                     </ul>
                 </nav>
             </div>
