--- a/paginaprincipal.html
+++ b/paginaprincipal.html
@@ -9,8 +9,8 @@
            <h1><img class="logotipo" src="PST 55.png" alt="Logo do site"></h1>
            <nav>
                <ul>
-                   <li><a href="paginaprincipal.html">PÁGINA PRINCIPAL</a>
-                   <li><a href="servicos.html">TREINOS</a>
+               
+                   <li><a href="treinos.html">TREINOS</a>
                    <li><a href="login.html">LOGIN</a>
                </ul>
            </nav>
