--- a/login.html
+++ b/login.html
@@ -13,6 +13,7 @@
                     <ul>
                         <li><a href="paginaprincipal.html">PÁGINA PRINCIPAL</a>
                         <li><a href="treinos.html">TREINOS</a>
+                        <li><a href="creditos.html">CRÉDITOS</a> 
                         
                     </ul>
                 </nav>
