--- a/paginaprincipal.html
+++ b/paginaprincipal.html
@@ -12,6 +12,7 @@
                
                    <li><a href="treinos.html">TREINOS</a>
                    <li><a href="login.html">LOGIN</a>
+                   <li><a href="creditos.html">CRÉDITOS</a> 
                </ul>
            </nav>
        </div>
