--- a/treinos.html
+++ b/treinos.html
@@ -13,6 +13,7 @@
                     <ul>
                         <li><a href="paginaprincipal.html">PÁGINA PRINCIPAL</a>
                         <li><a href="login.html">LOGIN</a>
+                        <li><a href="creditos.html">CRÉDITOS</a> 
                     </ul>
                 </nav>
             </div>
